--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Deepak Redy Kolagatla">
 
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>Deepak Reddy Kolagatla Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -204,32 +204,35 @@
               <div class="mb-5 heading-border"></div>
             </div>
             <div class="resume-item col-md-6 col-sm-12 "> 
-              <div class="card mx-0 p-4 mb-5" style="border-color: #17a2b8; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
+              <div class="card mx-0 p-4 mb-5" style="border-color: #17a2b8; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21); height: 300px;">
                 <div class=" resume-content mr-auto">
                     <h4 class="mb-3"><i class="fa fa-globe mr-3 text-info"></i> Face Liveness Detection using OpenCV and CNN</h4>
-                    <p>This is my final year group project in which I served as a team lead. We developed Face Liveness Detection using Open CV and CNN, a liveness model that can prevent the attacks of face spoofing. Our liveness model achieved an accuracy of 89% after being trained over a large number of data sets and tested under various conditions</p>
+                    <p>This is my final year group project in which I served as a team lead. We developed Face Liveness Detection using Open CV and CNN, 
+                      a liveness model that can prevent the attacks of face spoofing. Our liveness model achieved an accuracy of 89% after being trained over a large number of data sets and tested under various conditions</p>
                 </div>
-                <div class="resume-date text-md-right">
+                <div class="resume-date text-md-right" style="padding-top: 47px;">
                     <span class="text-primary">April 2021</span>
                 </div>
               </div>  
             </div>
             <div class="resume-item col-md-6 col-sm-12">
-              <div class="card mx-0 p-4 mb-5" style="border-color: #ffc107; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
+              <div class="card mx-0 p-4 mb-5" style="border-color: #ffc107; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);height: 300px;">
                 <div class="resume-content mr-auto">
                     <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i> Charge Management System</h4>
-                    <p>Charge Management System which is part of the Virtusa Neural Hack season 4 competition. The project is built on technologies Angular, Spring Boot, JBoss Drools, and MySQL. The objective of this application is to have a centralized charge management system that will process the fees/charges to be levied for all transactions being carried out in both retail and corporate banking by users.</p>
+                    <p>Charge Management System which is part of the Virtusa Neural Hack season 4 competition. The project is built on technologies Angular, Spring Boot,
+                       JBoss Drools, and MySQL. The objective of this application is to have a centralized charge management system that will process the fees/charges to be levied for all transactions being carried out in both retail and corporate banking by users.</p>
                 </div>
-                <div class="resume-date text-md-right">
+                <div class="resume-date text-md-right" style="padding-top: 24px;">
                     <span class="text-primary">Octobor 2020</span>
                 </div>
               </div>  
             </div>
             <div class="resume-item col-md-6 col-sm-12">
-              <div class="card mx-0 p-4 mb-5" style="border-color: #28a745; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
+              <div class="card mx-0 p-4 mb-5" style="border-color: #28a745; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);height: 300px;">
                 <div class="resume-content mr-auto">
                     <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Event Management</h4>
-                    <p>Event management Full-stack Web project for college that conducts Hackathons, Workshops, etc. It is developed using the MERN stack, which includes technologies like React, Node, Express, and Mongo DB to deliver details of events to the users with QR codes which will be scanned at the event by admin to mark their attendance and also provided admin screen to add events and provide perks for attending the events to the users.</p>
+                    <p>Event management Full-stack Web project for college that conducts Hackathons, Workshops, etc. It is developed using the MERN stack, which includes 
+                      technologies like React, Node, Express, and Mongo DB to deliver details of events to the users with QR codes which will be scanned at the event by admin to mark their attendance and also provided admin screen to add events and provide perks for attending the events to the users.</p>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">August 2020</span>
@@ -237,14 +240,14 @@
               </div>  
             </div>
             <div class="resume-item col-md-6 col-sm-12">
-              <div class="card mx-0 p-4 mb-5" style="border-color: #2196f3; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
+              <div class="card mx-0 p-4 mb-5" style="border-color: #2196f3; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);height: 300px;">
                 <div class="resume-content mr-auto">
                     <h4 class="mb-3"><i class="fa fa-area-chart mr-3 text-primary"></i>Robo Escape Game</h4>
                     <p>it was a classic game called Robo escape it is built using Pygame Library in Python Programming. It is similar to google Dino Run but with more design
                       and more features added to the game, included objects like saw and spike for the Robo to escape and high score to beat </p>
                 </div>
-                <div class="resume-date text-md-right">
-                    <span class="text-primary">November 2019</span>
+                <div class="resume-date text-md-right" style="padding-top: 47px;">
+                    <span class="text-primary" >November 2019</span>
                 </div>
               </div>  
             </div>
